--- a/ERP/ERP.Web/Areas/Inventory/Views/Shared/Layout.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/Shared/Layout.cshtml
@@ -250,6 +250,7 @@
                         <ul class="treeview-menu">
                             <li><a href="/Inventory/NhapKho/DSNhapKho"><i class="fa fa-angle-double-right"></i>Danh sách nhập kho</a></li>
                             <li><a href="/Inventory/NhapKho/Index"><i class="fa fa-angle-double-right"></i>Phiếu nhập kho mới</a></li>
+                            <li><a href="/Inventory/NhapKho/NhapKhoMH"><i class="fa fa-angle-double-right"></i>Phiếu nhập kho mua hàng</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
