--- a/ERP/ERP.Web/Areas/Inventory/Views/HangSp/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/HangSp/Index.cshtml
@@ -22,7 +22,7 @@
                 </div>
             </form>
         </div>
-        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add New Maker</button>
+        <button type="button" class="btn fa fa-plus" data-toggle="modal" data-target="#myModal" style="float: right; margin-bottom: 5px;">Add New Maker</button>
 
         <!-- Modal Add New -->
         <div class="modal fade" id="myModal" role="dialog">
@@ -162,7 +162,6 @@
         <table id="example" class="table table-bordered" cellspacing="0" name="tblhanghoa">
             <thead>
                 <tr>
-
                     <th>Maker Code</th>
                     <th>Maker Name</th>
                     <th>Maker's Parent Code </th>
