--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO.cshtml
@@ -23,6 +23,7 @@
                     <th>Địa điểm giao hàng</th>
                     <th>Nhân viên quản lý</th>
                     <th>Trạng thái</th>
+                    <th>Tạo phiếu bán hàng</th>
                 </tr>
             </thead>
             <tbody>
@@ -51,6 +52,9 @@
                         <div>
                             <i ng-if="item.DA_DUYET == false && item.DA_HUY == false && item.DANG_DUYET == true" class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         </div>
+                    </td>
+                    <td>
+                        <a href="/KinhDoanh/DonHangPO/Edit/{{item.MA_SO_PO}}">Tạo phiếu bán hàng</a>
                     </td>
                 </tr>
             </tbody>
