--- a/ERP/ERP.Web/Views/KhachHang/Index.cshtml
+++ b/ERP/ERP.Web/Views/KhachHang/Index.cshtml
@@ -1616,7 +1616,7 @@ input:-ms-input-placeholder {
                     <th>Tình trạng hoạt động </th>
                     <th>Nhân viên kho phụ trách</th>
                     <th>Sales phụ trách</th>
-                    <th>Sales mẹ</th>
+                    <th>Sales quản lý</th>
                     <th ng-show="isadmin">Sửa</th>
                     <th ng-show="isadmin">Xóa</th>
                     <th ng-show="isadmin">Copy khách hàng</th>
