--- a/ERP/ERP.Web/Areas/Inventory/Views/Kho/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/Kho/Index.cshtml
@@ -6,7 +6,9 @@
 
 <link href="~/Content/self-writing/css/KhoHL.css" rel="stylesheet" />
 
-<div class="panel-heading">Bạn đang xem danh mục kho</div>
+<div class="panel-heading">
+    <marquee width="80%">Bạn đang xem danh mục kho hàng hóa</marquee>
+</div>
 <br />
 <div ng-app="myApp" ng-controller="khoCtrl">
     <div class="content">
