--- a/ERP/ERP.Web/Areas/Inventory/Views/HangSp/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/HangSp/Index.cshtml
@@ -166,8 +166,7 @@
                     <th>Maker Name</th>
                     <th>Maker's Parent Code </th>
                     <th>Note</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
+                    <th colspan="2">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -177,10 +176,10 @@
                     <td class="text-left">{{item.MA_NHOM_HANG_CHA}}</td>
                     <td>{{item.GHI_CHU}}</td>
                     <td>
-                        <button class="btn btn-circle" ng-click="edit(item)" type="button" data-toggle="modal" data-target="#myEdit"><i class="glyphicon glyphicon-edit"></i></button>
+                        <button class="btn fa fa-edit" ng-click="edit(item)" type="button" data-toggle="modal" data-target="#myEdit"></button>
                     </td>
                     <td>
-                        <button class="btn btn-circle" ng-click="edit(item)" type="button" data-toggle="modal" data-target="#delete_item"><i class="glyphicon glyphicon-remove"></i></button>
+                        <button class="btn fa fa-trash" ng-click="edit(item)" type="button" data-toggle="modal" data-target="#delete_item"></button>
                         <!--<button class="btn btn-warning btn-circle" ng-click="delete(item.MA_KHO)"><i class="glyphicon glyphicon-remove"></i></button>-->
                     </td>
 
