--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/DonBanHangHome.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/DonBanHangHome.cshtml
@@ -7,6 +7,31 @@
 <script src="~/Content/self-writing/js/Controllers/BanHangCtrl.js"></script>
 <script src="~/Content/self-writing/js/Services/BanHangService.js"></script>
 <link href="~/Content/self-writing/css/Kinhdoanh/donhangPO.css" rel="stylesheet" />
+<style>
+    /* Let's get this party started */
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: #00BFFF;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+
+        ::-webkit-scrollbar-thumb:window-inactive {
+            background: #00BFFF;
+        }
+</style>
 <div class="panel-heading">
     <marquee width="80%">Bạn đang xem danh mục đơn bán hàng</marquee>
 </div>
