--- a/ERP/ERP.Web/Content/self-writing/css/KhoHL.css
+++ b/ERP/ERP.Web/Content/self-writing/css/KhoHL.css
@@ -1,28 +1,90 @@
-﻿body {
+﻿@charset "utf-8";
+/* CSS Document */
+
+body {font:normal 12px Arial, Helvetica, sans-serif; background: #fff; color:#333;}
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+caption,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {display: block;}
+body {line-height: 1;}
+ol, ul {list-style: none;}
+blockquote, q {quotes: none;}
+blockquote:before, blockquote:after,
+q:before, q:after {content: ''; content: none;}
+a, input[type="text"]:focus, input[type="password"]:focus, input[type="submit"]:focus, textarea {outline: 0 none;}
+a {text-decoration:none; color:#333;}
+.fl { float: left; }
+.fr { float: right; }
+.clearfix:after {
+    clear: both;
+    content: ".";
+    display: block;
+    height: 0;
+    line-height: 0;
+    visibility: hidden;
+}
+html[xmlns] .clearfix {
+    display: block;
+}
+html[xmlns] .clearfix { display: block; }
+* html .clearfix { height: 1%; }
+hr {
+    border-color: #aaa;
+    border-right: 0 none;
+    border-style: solid none none;
+    border-width: 1px 0 0;
+    clear: both;
+    height: 1px;
+    line-height: 1em;
+    margin: 10px 0 10px 0;
+}
+hr.dots {
+    border-style: dotted;
+}
+.wrapper {
+    width: 100%;
+    padding: 20px 0px;
+}
+.inner_wrapper {
+    width: 960px;
+    margin: 0px auto;
+    padding: 20px;
+    background: #fff;
+}   
+.header {
+    width: 100%;
+}
+
+body {
     padding:0px;
     margin:0px;
 }
 .panel-heading {
         margin: auto;
-        width: 40%;
         text-align: center;
-        color: #333;
+        color: #1191BF;
+        font-size: 20px;
         background-color: #f5f5f5;
         border-color: #ddd;
     }
-td,tr,th{
-    border: 1px solid #ddd !important;
-    border-collapse: collapse;
-    vertical-align: middle !important;
-    
-    font-family: Lora;
-    color: #777777;
-}
-th{
-    font-size: 16px;
-    background: white;
-    text-align: center;
-}
+
 .container{
     padding-top: 10px;
 }
@@ -91,4 +153,67 @@ border-radius: 0!important;
 }
 .odd{
     background: #ECF0F5;
+}
+
+.button_addrow{
+    border-radius: 3px !important;
+    float: right;
+    height: 30px;
+    margin-right: 10px;
+    padding: 0 10px;
+    background-color: #38B8E6;
+    margin-top: 5px;
+}
+table, th, td
+{
+border: 1px solid black;
+}
+
+table
+{
+border-collapse:collapse;
+}
+table,th, td
+{
+border: 1px solid black;
+}
+
+td
+{
+padding:5px;
+}
+
+table 
+{
+width:100%;
+}
+th
+{
+height:40px;
+}
+table, td, th
+{
+border:1px solid #DDDDDD;
+}
+th
+{
+background-color:#1191BF;
+color:white;
+}
+#tbl thead tr th.headerSortUp span {
+  background-image: url('up-arrow.png');
+  background-repeat:no-repeat;
+}
+#tbl thead tr th.headerSortDown span {
+  background-image: url('down-arrow.png');
+background-repeat:no-repeat;
+  }
+#tbl thead tr th{
+cursor: pointer;}  
+
+#tbl thead tr th span { 
+  padding-right: 20px;
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+  font-weight: bold;
 }
