--- a/ERP/ERP.Web/Areas/Inventory/Views/NhapKho/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/NhapKho/Index.cshtml
@@ -19,7 +19,7 @@
 <script src="~/Content/Scripts/angularjs/angular.js"></script>
 <script src="~/Content/Scripts/angularjs/angular-route.min.js"></script>
 <script src="~/Content/Scripts/angularjs/dirPagination.js"></script>
-<script src="~/Content/Scripts/angularjs/app.js"></script>
+@*<script src="~/Content/Scripts/angularjs/app.js"></script>*@
 <script src="~/Content/Scripts/daterangepicker.js"></script>
 <script src="~/Content/Scripts/moment.min.js"></script>
 <script src="~/Content/download/date_directive.js"></script>
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="~/Content/assets/js/pages/form_bootstrap_select.js"></script>
 <script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-debounce/0.1.7/angular-debounce.js"></script>
 <script src="~/Content/Scripts/angularjs/controller/StoreInsertController.js"></script>
-<div class="" ng-app="app" ng-controller="StoreInsertController">
+<div class="" ng-app="myApp" ng-controller="StoreInsertController">
     <!-- Dashboard content -->
     <div class="row">
         <div class="col-lg-12">
