--- a/ERP/ERP.Web/Areas/Inventory/Views/NhapKho/DSNhapKho.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/NhapKho/DSNhapKho.cshtml
@@ -20,7 +20,7 @@
 
 <script src="~/Content/assets/js/plugins/notifications/pnotify.min.js"></script>
 <script src="~/Content/Scripts/angularjs/angular-route.min.js"></script>
-<script src="~/Content/Scripts/angularjs/app.js"></script>
+@*<script src="~/Content/Scripts/angularjs/app.js"></script>*@
 <script src="~/Content/download/date_directive.js"></script>
 <script src="~/Content/download/bootstrap-datetimepicker.js"></script>
 <script src="~/Content/Scripts/moment.min.js"></script>
@@ -31,7 +31,7 @@
 <script src="~/Content/Scripts/angularjs/controller/DSNhapKhoController.js"></script>
 
 
-<div ng-app="app" ng-controller="DSPhieuNhapKhoController">
+<div ng-app="myApp" ng-controller="DSPhieuNhapKhoController">
     <div class="content">
         <div class="phieuthu padding10 borderRadius3 border" >
             <div class="head clearfix paddingTB10">
