--- a/ERP/ERP.Web/Areas/Inventory/Views/XuatKho/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/XuatKho/Index.cshtml
@@ -19,15 +19,16 @@
 <script src="~/Content/Scripts/angularjs/angular.js"></script>
 <script src="~/Content/Scripts/angularjs/angular-route.min.js"></script>
 <script src="~/Content/Scripts/angularjs/dirPagination.js"></script>
-<script src="~/Content/Scripts/angularjs/app.js"></script>
+@*<script src="~/Content/Scripts/angularjs/app.js"></script>*@
 <script src="~/Content/Scripts/daterangepicker.js"></script>
 <script src="~/Content/Scripts/moment.min.js"></script>
 <script src="~/Content/download/date_directive.js"></script>
 <script src="~/Content/download/bootstrap-datetimepicker.js"></script>
 <script type="text/javascript" src="~/Content/assets/js/plugins/forms/selects/bootstrap_select.min.js"></script>
 <script type="text/javascript" src="~/Content/assets/js/pages/form_bootstrap_select.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-debounce/0.1.7/angular-debounce.js"></script>
 <script src="~/Content/Scripts/angularjs/controller/StoreExportController.js"></script>
-<div class="content" ng-app="app" ng-controller="StoreExportController">
+<div class="content" ng-app="myApp" ng-controller="StoreExportController">
     <!-- Dashboard content -->
     <div class="row">
         <div class="col-lg-12">
@@ -270,7 +271,7 @@
                                                     <i class="icon-arrow-down5"></i>
                                                 </div>
                                             </div>
-                                            <div class="tableselect" id="DataHangHoa{{index}}" style="display: block; max-width: 750px; padding-left: 0px; margin-left: -9px;">
+                                            <div class="tableselect" id="DataHangHoa{{index}}" style="display: none; max-width: 750px; padding-left: 0px; margin-left: -9px;">
                                                 <table class="table-hover ">
                                                     <thead>
                                                         <tr>
